# fsharpbinding

./: FSharpAmbience.cs  FSharpBinding.addin.xml  FSharpBinding.mdp  FSharpBinding.mds  FSharpBinding.userprefs  FSharpBindingCompilerManager.cs  FSharpEnhancedCodeProvider.cs  FSharpLanguageBinding.cs  FSharpSyntaxMode.xml  MonoDevelop.FSharpBinding.pidb  md1format.xml
Autotools/: Autotools.mdp  Makefile.am  MonoDevelop.CSharpBinding.Autotools.pidb
Commands/: FSharpBindingNodeExtension.cs
FormattingStrategy/: FSharpIndentEngine.cs  FSharpIndentEngineStack.cs
Gui/: CodeGenerationPanel.cs  CompilerOptionsPanelWidget.cs  FSharpParameterDataProvider.cs  GlobalOptionsPanel.cs  OverrideCompletionData.cs
Project/: FSharpCompilerParameters.cs  FSharpResourceIdBuilder.cs
gtk-gui/: FSharpBinding.CodeGenerationPanelWidget.cs  FSharpBinding.CompilerOptionsPanelWidget.cs  FSharpBinding.GlobalOptionsPanelWidget.cs  gui.stetic  objects.xml
icons/: FSharp.FileIcon
templates/: ConsoleProject.xpt.xml  EmptyFSIFile.xft.xml  EmptyFSharpFile.xft.xml  EmptyProject.xpt.xml
